Chenged class names and started to fix the breafast menu's style

--- a/roasts.html
+++ b/roasts.html
@@ -53,7 +53,7 @@
 
 
     <div class="container-fluid-s p-0">
-      <div class="row p-0 itemMenu">
+      <div class="row p-0 item-menu">
         <div class="col-3">
           <h4>Monday - Pork with Apple Sauce & Stuffing</h4>
           <h4>Tuesday - Turkey with Cranberry Sauce & Stuffing</h4>
