--- a/catering.html
+++ b/catering.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="images/sandwich_logo.png">
-    <title>Catering</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="styles.css" rel="stylesheet">
+  <link rel="icon" href="images/sandwich_logo.png">
+  <title>Catering</title>
 </head>
 
 
@@ -15,7 +17,8 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarNav">
@@ -24,11 +27,14 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
-            <ul class="dropdown-menu navDropDown" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
+            <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="menus.html">All Menus</a>
+                <hr>
+              </li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips, & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
@@ -48,39 +54,45 @@
 
   <div class="row p-0 m-0">
     <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
-    <div class="relativePosTitle">
-      <p class="w-100 titleBackground"></p>
+    <div class="relative-absolute-position">
+      <p class="w-100 title-background"></p>
       <h1 class="title">Welcome to Loafers!</h1>
     </div>
   </div>
 
   <div class="container-fluid-s">
-    <div class="pageContent">
+    <div class="page-content">
       <p class="pt-3 m-0 text-decoration-underline">Menu A</p>
-      <p>£3.50 per person<br>A selection of freshly made sandwiches (4 quarters per person) with assorted fillings on white, granary and wholemeal bread. Plus a packet of crisps.</p>
+      <p>£3.50 per person<br>A selection of freshly made sandwiches (4 quarters per person) with assorted fillings on
+        white, granary and wholemeal bread. Plus a packet of crisps.</p>
       <p class="pt-3 m-0 text-decoration-underline">Menu B</p>
-      <p>£4.75 per person<br>This menu offers a sandwich platter (4 quarters per person) with assorted fillings on white, granary and wholemeal bread plus a delicious savoury selection. Plus a packet of crisps.</p>
+      <p>£4.75 per person<br>This menu offers a sandwich platter (4 quarters per person) with assorted fillings on
+        white, granary and wholemeal bread plus a delicious savoury selection. Plus a packet of crisps.</p>
       <p class="pt-3 m-0 text-decoration-underline">Menu C</p>
-      <p>£5.75 per person<br>This menu offers a sandwich platter (4 quarters per person) with assorted fillings on white, granary and wholemeal bread plus a delicious savoury selection and a platter of tasty cakes. Plus a packet of crisps.</p>
+      <p>£5.75 per person<br>This menu offers a sandwich platter (4 quarters per person) with assorted fillings on
+        white, granary and wholemeal bread plus a delicious savoury selection and a platter of tasty cakes. Plus a
+        packet of crisps.</p>
       <p class="pt-3 m-0 text-decoration-underline">Menu D</p>
-      <p class="lastItem">£6.75 per person<br>This menu offers a sandwich platter (4 quarters per person) with assorted fillings on white, granary and wholemeal bread plus a delicious savoury selection, a platter of tasty cakes and a fruit platter. Plus a packet of crisps.</p>
+      <p>£6.75 per person<br>This menu offers a sandwich platter (4 quarters per person) with assorted fillings on
+        white, granary and wholemeal bread plus a delicious savoury selection, a platter of tasty cakes and a fruit
+        platter. Plus a packet of crisps.</p>
     </div>
   </div>
-
-
 </body>
 
 
 
 <footer class="w-100 fixed-bottom">
   <div class="p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
+        alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
+        alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
-
 </footer>
 
-
 <script src="scripts/scripts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
