--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="images/sandwich_logo.png">
-    <title>Contact Us</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="styles.css" rel="stylesheet">
+  <link rel="icon" href="images/sandwich_logo.png">
+  <title>Contact Us</title>
 </head>
 
 
@@ -15,7 +17,8 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarNav">
@@ -24,11 +27,14 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
-            <ul class="dropdown-menu navDropDown" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
+            <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="menus.html">All Menus</a>
+                <hr>
+              </li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips, & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
@@ -48,38 +54,44 @@
 
   <div class="row p-0 m-0">
     <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
-    <div class="relativePosTitle">
-      <p class="w-100 titleBackground"></p>
+    <div class="relative-absolute-position">
+      <p class="w-100 title-background"></p>
       <h1 class="title">Contact Us!</h1>
     </div>
   </div>
 
   <div class="container-fluid-s">
-    <div class="pageContent">
-        <p class="pt-3 text-decoration-underline">How to Contact Us:</p>
-        <p class="m-0">If you would like to place an order, please call:</p>
-        <p>01823 337 593</p>
-        <p class="pt-3 m-0">The best way to contact us for other matters is via email:</p>
-        <p>sandwiches@me.com</p>
-        <p class="py-3">We take orders up until 3pm the day before you need the lunch or other food delivery, although longer notice is of course preferred. There are limits to our delivery destinations and carrying capabilities, happily to deliver for free in Taunton but a small charge may be made for the surrounding areas. At the moment we don't really deliver smaller orders but if it's a sensible order we'll certainly do what we can to get it to you.</p>
-        <p class="pt-4 text-decoration-underline">Map Directions:</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5020.22613213925!2d-3.1048!3d51.01406!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2df2125992726a7!2sLoafers%20Sandwich%20Bar!5e0!3m2!1sen!2sus!4v1647881626365!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <p class="pt-5 mt-3 text-decoration-underline">Further Enquires:</p>
-        <p>if you have any further enquires, please fill out this form and we will email you back as soon as we can!</p>
-        <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="email">
-              <p class="error" id="emailError"></p>
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Enquiry</label>
-              <input type="text" class="form-control" id="enquiry">
-              <p class="error" id="enquiryError"></p>
-            </div>
-            <button type="button" class="btn btn-primary" onclick="sendForm()">Submit</button>
-            <p id="formSent" class="success lastItem"></p>
-        </form>
+    <div class="page-content">
+      <p class="pt-3 text-decoration-underline">How to Contact Us:</p>
+      <p class="m-0">If you would like to place an order, please call:</p>
+      <p>01823 337 593</p>
+      <p class="pt-3 m-0">The best way to contact us for other matters is via email:</p>
+      <p>sandwiches@me.com</p>
+      <p class="py-3">We take orders up until 3pm the day before you need the lunch or other food delivery, although
+        longer notice is of course preferred. There are limits to our delivery destinations and carrying capabilities,
+        happily to deliver for free in Taunton but a small charge may be made for the surrounding areas. At the moment
+        we don't really deliver smaller orders but if it's a sensible order we'll certainly do what we can to get it to
+        you.</p>
+      <p class="pt-4 text-decoration-underline">Map Directions:</p>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5020.22613213925!2d-3.1048!3d51.01406!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2df2125992726a7!2sLoafers%20Sandwich%20Bar!5e0!3m2!1sen!2sus!4v1647881626365!5m2!1sen!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <p class="pt-5 mt-3 text-decoration-underline">Further Enquires:</p>
+      <p>if you have any further enquires, please fill out this form and we will email you back as soon as we can!</p>
+      <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="email">
+          <p class="error" id="email-error"></p>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Enquiry</label>
+          <input type="text" class="form-control" id="enquiry">
+          <p class="error" id="enquiry-error"></p>
+        </div>
+        <button type="button" class="btn btn-primary" onclick="sendForm()">Submit</button>
+        <p id="form-sent" class="success lastItem"></p>
+      </form>
     </div>
   </div>
 </body>
@@ -88,12 +100,14 @@
 
 <footer class="w-100 fixed-bottom">
   <div class="p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
+        alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
+        alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
 
-
 <script src="scripts/scripts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
