--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
-            <ul class="dropdown-menu navDropDown" aria-labelledby="navbarDropdownMenuLink">
+            <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips, & Jackets</a></li>
@@ -48,21 +48,21 @@
 
   <div class="row p-0 m-0">
     <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
-    <div class="relativePosTitle">
-      <p class="w-100 titleBackground"></p>
+    <div class="relative-absolute-position">
+      <p class="w-100 title-background"></p>
       <h1 class="title">Welcome to Loafers!</h1>
     </div>
   </div>
 
-  <div class="container-fluid-s">
-    <div class="pageContent">
+  <div class="container-fluid">
+    <div class="page-content">
       <p class="py-3">Situated in Somerset's county town of Taunton, Loafers has been open since 1978 and is still offering a great selection of hot and cold food from our shop located on the historic Bath Place.</p>
       <p class="py-3">Come and visit us for a great selection of breakfast rolls, daily roasts, burgers, paninis, wraps, plus various cold fillings served from our salad bar.</p>
       <p class="pt-5 text-decoration-underline">Our Loyalty Scheme</p>
       <p>We give your card a stamp when you come in and get some food and when it's full bring it back in on your next visit and you can have a little treat on us.</p>
-      <img id="loyaltyCard" class="pb-3" src="images/loyalty_stamp.jpg" alt="Loyalty stamps">
+      <img id="loyalty-card" class="pb-3" src="images/loyalty_stamp.jpg" alt="Loyalty stamps">
       <p class="pt-5 m-0 text-decoration-underline">Allegen Information</p>
-      <p class="lastItem">Please be aware that some of our products may contain one or more of the 14 main allergens that can be harmful if eaten, if you are ordering over the telephone or are visiting the shop, please make the member of staff you talk to aware of any specific allergens or other dietary requirement.</p>
+      <p>Please be aware that some of our products may contain one or more of the 14 main allergens that can be harmful if eaten, if you are ordering over the telephone or are visiting the shop, please make the member of staff you talk to aware of any specific allergens or other dietary requirement.</p>
     </div>
   </div>
 
@@ -76,9 +76,7 @@
     <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
     <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
-
 </footer>
-
 
 <script src="scripts/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
