--- a/menus.html
+++ b/menus.html
@@ -24,11 +24,11 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link active dropdown-toggle" aria-current="page" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle  active" aria-current="page" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
-            <ul class="dropdown-menu navDropDown" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
+            <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item dropdown-active" href="menus.html">All Menus</a><hr></li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips, & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
@@ -48,50 +48,70 @@
 
   <div class="row p-0 m-0">
     <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
-    <div class="relativePosTitle">
-      <p class="w-100 titleBackground"></p>
-      <h1 class="title">Welcome to Loafers!</h1>
+    <div class="relative-absolute-position">
+      <p class="w-100 title-background"></p>
+      <h1 class="title">Our Menus</h1>
     </div>
   </div>
 
 
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/paninis_wraps_roasts.png" class="card-img-top" alt="Paninis, Wraps & Roasts">
-                    <div class="card-body">
-                    <h5 class="card-title">paninis, Wraps & Roasts</h5>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/paninis_wraps_roasts.png" class="card-img-top" alt="Paninis, Wraps & Roasts">
-                    <div class="card-body">
-                    <h5 class="card-title">paninis, Wraps & Roasts</h5>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
+  <section id="menu-cards">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col menu-box">
+          <div class="card">
+            <a href="paninis_wraps_roasts.html">
+              <img src="images/paninis_wraps_roasts.png" class="card-img-top" alt="Paninis, Wraps & Roasts">
+              <h5 class="card-title">Paninis, Wraps & Roasts</h5>
+            </a>
+          </div>
         </div>
+        <div class="col menu-box">
+          <div class="card">
+            <a href="burgers_chips_jackets.html">
+              <img src="images/burgers_chips_jackets.png" class="card-img-top" alt="Burgers, Chips & Jackets">
+              <h5 class="card-title">Burgers, Chips & Jackets</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col menu-box">
+          <div class="card">
+            <a href="breakfasts.html">
+              <img src="images/breakfasts.png" class="card-img-top" alt="Breakfasts">
+              <h5 class="card-title">Breakfasts</h5>
+            </a>
+          </div>
+        </div>
+        <div class="col menu-box">
+          <div class="card">
+            <a href="cold_fillings_salads">
+              <img src="images/cold_fillings_salads.png" class="card-img-top" alt="Cold Fillings & Salads">
+              <h5 class="card-title">Cold Fillings & Salads</h5>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-
-
-    
+  </section>
 </body>
 
 
 
 <footer class="w-100 fixed-bottom">
   <div class="p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
+        alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
+        alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
-
 </footer>
 
 
 <script src="scripts/scripts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
